--- a/src/main/resources/templates/common/head.html
+++ b/src/main/resources/templates/common/head.html
@@ -19,3 +19,4 @@ $(document).ready( function () {
     $('.tb').DataTable();
 } );
 </script>
+<link rel="stylesheet" href="https://static.oliveyoung.co.kr/pc-static-root/css/style.css?dumm=20221208001">
