--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -11,7 +11,7 @@
                         회사소개
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <li><a class="dropdown-item" href="">브랜드 스토리</a></li>
+                    <li><a class="dropdown-item" href="/sub/sub1.do">브랜드 스토리</a></li>
                     <li><a class="dropdown-item" href="">CEO 메세지</a></li>
                     <li><a class="dropdown-item" href="">ESG 지속가능경영</a></li>
                   </ul>
