--- a/src/main/resources/templates/qna/qnaList.html
+++ b/src/main/resources/templates/qna/qnaList.html
@@ -14,7 +14,7 @@
   <div class="wrapper">
     <div class="content" id="content">
 	    <div class="row column text-center">
-	      <h2>QnA 게시판 목록</h2>
+	      <h2 style="margin-top:50px;">QnA 게시판 목록</h2>
 		  <section>
 			<div class="container">
 				<div class="row column text-center">
