--- a/src/main/resources/templates/sub/sub1.html
+++ b/src/main/resources/templates/sub/sub1.html
@@ -6,14 +6,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>브랜드 소개</title>
+    <title>브랜드 스토리</title>
     <th:block th:include="common/head"></th:block>
-    <link rel="stylesheet" href="https://static.oliveyoung.co.kr/pc-static-root/css/style.css?dumm=20221208001">
 </head>
 <body>
     <th:block th:include="common/header"></th:block>
     <div class="brand-txtus">
-        <!-- <div class="pic"><img src="https://static.oliveyoung.co.kr/pc-static-root/image/footer/@company_brand.jpg" alt="올리브영 매장"></div> -->
         <div class="brand_info" style="margin-top:90px;">
             <h3 class="tit_bx"><span>건강한 아름다움을 제안하는 글로벌 라이프스타일 플랫폼</span></h3>
             <p class="sub_tx">올리브영은 국내에 최적화된 헬스&amp;뷰티 스토어 개념을 최초로 선보이며<br>1999년 1호점을 오픈한 이래, 늘 최초, 최고의 길을 걸어왔습니다.</p>
@@ -41,7 +39,7 @@
 
     <div class="brand-ci">
         <h3>올리브영 BI</h3>
-        <div class="image"><img src="https://static.oliveyoung.co.kr/pc-static-root/image/footer/img_brochure.png" style="width:350px; height: 493px;" target="_blank" alt="OLIVE YOUNG"></div>
+        <div class="image"><img src="https://static.oliveyoung.co.kr/pc-static-root/image/footer/@company_ci.gif" target="_blank" alt="OLIVE YOUNG"></div>
         <div class="ci">
             <a href="https://static.oliveyoung.co.kr/pc-static-root/image/footer/OY_logo.zip" download="">AI 다운로드</a>
             <ul>
@@ -68,7 +66,7 @@
     <div class="brand-brochure">
         <div class="inner">
             <h3>E - 브로슈어</h3>
-            <div class="image"><a href="https://static.oliveyoung.co.kr/pc-static-root/html/olive2021_kor/index.html" target="_blank"><img src="./브랜드소개 _ 올리브영_files/img_brochure.png" target="_blank" alt="E - 브로슈어 이미지"></a></div>
+            <div class="image"><a href="https://static.oliveyoung.co.kr/pc-static-root/html/olive2021_kor/index.html" target="_blank"><img src="https://static.oliveyoung.co.kr/pc-static-root/image/footer/img_brochure.png" target="_blank" alt="E - 브로슈어 이미지"></a></div>
             <div class="ci">
                 <p>CJ올리브영은 글로벌 NO.1 헬스 &amp; 뷰티 옴니채널 브랜드로 도약하여<br>세계인의 건강하고 아름다운 라이프스타일을 선도하겠습니다.</p>
                 <a href="https://static.oliveyoung.co.kr/pc-static-root/html/olive2021_kor/index.html" target="_blank">E - 브로슈어 보기</a>
