--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -1,91 +1,88 @@
-<nav class="navbar navbar-expand-lg navbar-white bg-white" style="height:130px">
-    <a href="/" class="logo"><img src="	https://static.oliveyoung.co.kr/pc-static-root/image/comm/h1_logo_yearend.png" alt="로고" style=" margin-top: -30px; margin-left:730px; position:absolute; "></a>
-      <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown" style="margin-left:40px;">
-              <ul class="navbar-nav">
-                  <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        회사소개
-                  </a>
-                  <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <li><a class="dropdown-item" href="/sub/sub1.do">브랜드 스토리</a></li>
-                    <li><a class="dropdown-item" href="/sub/sub2.do">CEO 메세지</a></li>
-                    <li><a class="dropdown-item" href="/sub/sub3.do">ESG 지속가능경영</a></li>
+<!DOCTYPE html>
+<html lang="ko" xmlns="http://www.w3.org/1999/xhtml"
+ xmlns:th="http://www.thymeleaf.org"
+ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+</html>
+<head>
+<style>
+.hd { width: 100%; height:122px; position:absolute; top: 0; left: 0; z-index:91; }
+.hd_wrap { width: 1200px; margin: 0 auto; }
+.logo { display:block; width: 144px; height: auto; float:left; margin:30px 0px; }
+.logo img { display:block; width: 100%; height: auto; }
+.tnb { float:right; margin: 30px 0px; }
+.tnb a { padding: 1.5em; font-size:12px; color: deepskyblue; }
+.tnb a:hover { color:red; font-weight:700; text-decoration: underline; text-decoration-style:dotted; }
+/* 방법1 : logo/tnb/gnb 한 줄로 배치 */
+/* .gnb { float:left;  width: 704px; margin-left: 50px; margin-top: 16px; } */
+/* 방법2 : gnb만 밑으로 내릴 경우 */
+.gnb { clear:both; width: 100%; }
+/* clear-fix 처리 */
+.gnb:after { content:""; display:block; clear:both; } 
+.gnb > ul:after { content:""; display:block; clear:both; }
+.gnb > ul > li { float:left; width: 20%; height:40px; line-height: 40px; position:relative; }
+.gnb .dp1 { display:block; color:#fff; text-align: center; background-color:#333; font-size:16px; }
+.gnb li:hover .dp1 { color:#fff; background-color:#333; color: red;}
+.gnb .sub { display:none; width: 100%; height:auto; position:absolute; top:40px; background-color:#333; left: 0; z-index:90; height: 94px; }
+.gnb:hover li .sub { display:block;  }
+.gnb li .sub li { clear:both; height: 30px; line-height: 30px;}
+.gnb li .sub li a { background-color:#333; color:#fff; font-size:14px; display:block; text-indent:2em; overflow: hidden; white-space:nowrap; text-overflow: ellipsis; }
+.gnb li .sub li:hover a { color:red; }
+.content { clear: both; width: 100%; }
+.vs { clear:both; width: 100%; height:100vh; overflow:hidden; }
+.vdo { display:block; width:100%; height:auto; }
+</style>
+</head>
+<header class="hd">
+  <div class="hd_wrap">
+      <a href="index.html" class="logo"><img src="./img/lg_logo2.png" alt=""></a>
+      <nav class="tnb">
+          <a href="login.html">로그인</a>
+          <a href="join.html">회원가입</a>
+          <a href="boardList.html">게시판</a>
+          <a href="sitemap.html"><img src="./img/sitemap3.png" width="25" alt=""></a>
+      </nav>
+      <nav class="gnb">
+          <ul style="opacity: 0.85;">
+              <li class="item1">
+                  <a href="product.html#page1" class="dp1">제품</a>
+                  <ul class="sub">
+                      <li><a href="product.html#page1">TV</a></li>
+                      <li><a href="product.html#page2">IT</a></li>
+                      <li><a href="product.html#page3">Mobile</a></li>
                   </ul>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      스킨케어
-                  </a>
-                  <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <li><a class="dropdown-item" href="">토너/로션/올인원</a></li>
-                    <li><a class="dropdown-item" href="">에센스/크림</a></li>
-                    <li><a class="dropdown-item" href="">미스트/오일</a></li>
+              </li>
+              <li class="item2">
+                  <a href="technology.html#page1" class="dp1">기술</a>
+                  <ul class="sub">
+                      <li><a href="technology.html#page1">OLED</a></li>
+                      <li><a href="technology.html#page2">LCD</a></li>
                   </ul>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        헤어케어
-                  </a>
-                  <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <li><a class="dropdown-item" href="">샴푸/린스</a></li>
-                    <li><a class="dropdown-item" href="">헤어기기</a></li>
-                    <li><a class="dropdown-item" href="">에센스</a></li>
+              </li>
+              <li class="item3">
+                  <a href="esg.html#page1" class="dp1">ESG</a>
+                  <ul class="sub">
+                      <li><a href="esg.html#page1">환경</a></li>
+                      <li><a href="esg.html#page2">사회</a></li>
+                      <li><a href="esg.html#page3">지배구조</a></li>
                   </ul>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        향수/디퓨저
-                  </a>
-                  <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <li><a class="dropdown-item" href="">여성향수</a></li>
-                    <li><a class="dropdown-item" href="">남성향수</a></li>
-                    <li><a class="dropdown-item" href="">선물세트</a></li>
+              </li>
+              <li class="item4">
+                  <a href="company.html#page1" class="dp1">기업정보</a>
+                  <ul class="sub">
+                      <li><a href="company.html#page1">기업개요</a></li>
+                      <li><a href="company.html#page2">연혁</a></li>
+                      <li><a href="company.html#page3">사업장 위치</a></li>
                   </ul>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        고객센터
-                  </a>
-                  <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <li><a class="dropdown-item" href="/notice/noticeList.do">자유게시판</a></li>
-                    <li><a class="dropdown-item" href="/board/boardList.do">공지사항</a></li>
-                    <li><a class="dropdown-item" href="/qna/qnaList.do">Q&A</a></li>
+              </li>
+              <li class="item5">
+                  <a href="invest.html#page1" class="dp1">투자정보</a>
+                  <ul class="sub">
+                      <li><a href="invest.html#page1">재무정보</a></li>
+                      <li><a href="invest.html#page2">주주총회</a></li>
+                      <li><a href="invest.html#page3">공시정보</a></li>
                   </ul>
-                </li>
-              </ul>
-
-              <ul class="nav justify-content-end text-secondary">
-                <li class="nav-item" th:if="${session.sid}==null">
-                  <a class="nav-link " href="/custom/loginForm.do" style="color:blue; margin-left:1100px; font-weight: 700;">로그인</a>
-                </li>
-                <li class="nav-item" th:if="${session.sid}==null">
-                  <a class="nav-link" href="/custom/agree.do" style="color:blue; font-weight: bolder;">회원가입</a>
-                </li>
-                <li class="nav-item" th:if="${session.sid}!=null" style="margin-left:978px;">
-                  <a class="nav-link" th:text="${session.sid}+님" style="font-weight: bolder;"></a>
-                </li>
-                <li class="nav-item" th:if="${session.sid}!=null">
-                  <a class="nav-link" href="/custom/logout.do" style="color:#555;">로그아웃</a>
-                </li>
-                <li class="nav-item" th:if="${session.sid}!=null">
-                  <a class="nav-link" href="/custom/custominfo" style="color:#555;">마이페이지</a>
-                </li>
-                <!-- <li class="nav-item" th:if="${session.sid}!=null">
-                  <a class="nav-link" href="" style="color:#555;">구매내역</a>
-                </li> -->
-                <li class="nav-item" th:if="${session.sid}!=null">
-                  <a class="nav-link" href="/cart/cartList.do" style="color:#555;">장바구니</a>
-                </li>
-                <li class="nav-item" th:if="${session.sid}==admin">
-                  <a class="nav-link" href="/admin/adminpage.do" style="color:red;">관리자 페이지로</a>
-                </li>
-              </ul>
-        </div>
-      </div>
-    </nav>
-    <!-- <hr class="featurette-divider" style="margin-bottom:2px;"> -->
-    <br><div style="border-bottom: 0.1px solid #0000008C; margin-bottom: 2px;"></div>
+              </li>
+          </ul>
+      </nav>
+  </div>
+</header>
